syntax = "proto2";

package com.berserkbentobox.coldwar;

import "Leader.proto";
import "Dissidents.proto";
import "Id.proto";

// ========== Settings ==========

message ProvinceMechanicSettings {
	repeated ProvinceSettings province = 1;
}

message ProvinceSettings {
	optional ProvinceId id = 1;
	optional string label = 2;
	repeated ProvinceId adjacency = 3;
	optional int32 stability_base = 4 [default = 1];
	optional int32 init_influence = 5 [default = 0];
	optional Government init_government = 6 [default = REPUBLIC];
	optional ProvinceId init_occupier = 8;
	optional Dissidents init_dissidents = 9;
	optional ProvinceId init_military_base = 10;
	optional ProvinceId init_ally = 11;
	optional ProvinceRegion region = 12;
	optional LeaderCulture culture = 13;
	optional bool coastal = 15 [default = false];
}

// ========== State ==========

message ProvinceMechanicState {
	repeated ProvinceState province_state = 1;
}

message ProvinceState {
	optional ProvinceId id = 1;
	optional int32 influence = 3 [default = 0];
	optional Government gov = 5 [default = REPUBLIC];
	optional ProvinceId occupier = 6;
	optional ProvinceId base = 9;
	optional ProvinceId ally = 10;
	optional bool has_dissidents = 13;
	optional Dissidents dissidents = 14;
}

// ========== Moves ==========

// The top-level moves proto included in Moves.

message ProvinceMechanicMoves {
	repeated DiplomacyMove diplomacy_move = 1;
	repeated MilitaryMove military_move = 2;
	repeated CovertMove covert_move = 3;
}

// <Direct Influence Actions>

// Influence by spending DIP points
message DiplomacyMove {
	optional ProvinceId province_id = 1;
	optional int32 magnitude = 2;

//	option (pol_cost) = 1;
}

// Influence by spending MIL points
message MilitaryMove {
	optional ProvinceId province_id = 1;
	optional int32 magnitude = 2;

//	option (mil_cost) = 1;
}

// Influence by spending COV points
message CovertMove {
	optional ProvinceId province_id = 1;
	optional int32 magnitude = 2;

//	option (cov_cost) = 1;
}